--- a/.env-template
+++ b/.env-template
@@ -1,1 +1,9 @@
-WALLET_FILE=/Users/tonibuenter/_aaa/toni_buenter/crypto_currencies/arweave-keyfile-J7rV3LyQKbjYNm0skHSmz9h5mEujZ2Gb1tRFeZSjJGo.json
+ARWEAVE_HOST=arweave.net
+ARWEAVE_PORT=443
+ARWEAVE_PROTOCOL=https
+
+BUNDLR_NETWORK=http://node2.bundlr.network
+
+WALLET_FILE=/.../arweave-keyfile-....json
+
+UPLOAD_IMAGE_FILE_MYTHEN=/.../data/mythen.jpg
