--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "start": "ts-node src/wallet-info.ts"
+    "start": "ts-node src/wallet-info.ts",
+    "create-wallet": "ts-node src/create-wallet.ts",
+    "fund-bundlr": "ts-node src/fund-bundlr.ts",
+    "upload-data-bundlr": "ts-node src/upload-data-bundlr.ts"
   },
   "author": "tonibuenter",
   "license": "ISC",
@@ -13,9 +16,7 @@
     "dotenv": "^16.3.1",
     "fs-extra": "^11.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
-  "devDependencies": {
+    "typescript": "^5.1.6",
     "@types/node": "^20.4.5",
     "prettier": "^3.0.0",
     "tslib": "^2.6.1"
