--- a/package.json
+++ b/package.json
@@ -6,19 +6,39 @@
     "start": "ts-node src/wallet-info.ts",
     "create-wallet": "ts-node src/create-wallet.ts",
     "fund-bundlr": "ts-node src/fund-bundlr.ts",
-    "upload-data-bundlr": "ts-node src/upload-data-bundlr.ts"
+    "upload-data-bundlr": "ts-node src/upload-data-bundlr.ts",
+    "test": "mocha -r ts-node/register ./test/**/*test.ts"
   },
   "author": "tonibuenter",
   "license": "ISC",
   "dependencies": {
     "@bundlr-network/client": "^0.11.9",
-    "arseeding-js": "^0.0.30",
-    "dotenv": "^16.3.1",
-    "fs-extra": "^11.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
+    "@types/chai": "^4.3.4",
+    "@types/command-line-usage": "^5.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.5",
+    "arseeding-js": "^0.0.30",
+    "chai": "^4.3.7",
+    "command-line-args": "^5.2.1",
+    "command-line-usage": "^7.0.1",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.7.0",
+    "fs-extra": "^11.1.1",
+    "mocha": "^10.2.0",
+    "moment": "^2.29.4",
     "prettier": "^3.0.0",
-    "tslib": "^2.6.1"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tslib": "^2.6.1",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/command-line-args": "^5.2.0",
+    "@types/command-line-usage": "^5.0.2"
+  },
+  "bin": {
+    "artwork-cli": "dist/artwork-cli.js"
   }
 }
